--- a/incidentRestAPI.yml
+++ b/incidentRestAPI.yml
@@ -256,6 +256,7 @@ paths:
                         "state": 1,
                         "opened_at": "1997-09-08T05:55:00Z",
                         "sys_updated_on": "2024-07-17T14:36:59Z",
+                        "u_current_workplace": "workplace 123",
                         "opened_by": {
                             "first_name": "Example",
                             "last_name": "Name",
