--- a/dispoAPI/DispoAPI.yml
+++ b/dispoAPI/DispoAPI.yml
@@ -5,7 +5,7 @@ info:
   version: '0.0.1'
 
 servers:
-  - url: https://myit-dev.post.ch/api/x_ssagd_dispoapi/dispoapi
+  - url: https://<env_url>/api/x_ssagd_dispoapi/dispoapi
     description: development server
 
 security:
